--- a/web-src/public/index.html
+++ b/web-src/public/index.html
@@ -20,7 +20,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="<%= webpackConfig.output.publicPath %>favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-  <title>Vue Paper Dashboard</title>
+  <title>AMRViz: A pipelne for baterial genome analysis and visualization</title>
   <!-- Bootstrap core CSS     -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
